--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,14 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
+    <!-- App permissions -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+
+    <!-- <uses-sdk
+        android:minSdkVersion="21"
+        android:targetSdkVersion="21" /> -->
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
